<resources>
    <string name="app_name">pinlibrary</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>


    <string name="title_forgot_pin">Forgot your PIN?</string>
    <string name="title_pin_description">Enter PIN-code</string>

    <string name="title_btn_skip">Skip</string>
    <string name="title_btn_cancel">Cancel</string>

    <string name="title_create_pin_code">Create PIN-code</string>
    <string name="title_confirm_your_pin_code">Confirm your PIN-code</string>
    <string name="fingerprint_not_recognized">Not recognized</string>
</resources>
