<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:clickable="false"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pin_code_first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">


        <com.grishko188.pinlibrary.widget.SquareButton
            android:id="@+id/pin_code_button_1"
            style="@style/KeyboardButtonStyleWhiteRound"
            android:text="@string/btn_1" />

        <com.grishko188.pinlibrary.widget.SquareButton
            android:id="@+id/pin_code_button_2"
            style="@style/KeyboardButtonStyleWhiteRound"
            android:text="@string/btn_2" />

        <com.grishko188.pinlibrary.widget.SquareButton
            android:id="@+id/pin_code_button_3"
            style="@style/KeyboardButtonStyleWhiteRound"
            android:text="@string/btn_3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pin_code_second_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.grishko188.pinlibrary.widget.SquareButton
            android:id="@+id/pin_code_button_4"
            style="@style/KeyboardButtonStyleWhiteRound"
            android:text="@string/btn_4" />

        <com.grishko188.pinlibrary.widget.SquareButton
            android:id="@+id/pin_code_button_5"
            style="@style/KeyboardButtonStyleWhiteRound"
            android:text="@string/btn_5" />

        <com.grishko188.pinlibrary.widget.SquareButton
            android:id="@+id/pin_code_button_6"
            style="@style/KeyboardButtonStyleWhiteRound"
            android:text="@string/btn_6" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pin_code_third_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.grishko188.pinlibrary.widget.SquareButton
            android:id="@+id/pin_code_button_7"
            style="@style/KeyboardButtonStyleWhiteRound"
            android:text="@string/btn_7" />

        <com.grishko188.pinlibrary.widget.SquareButton
            android:id="@+id/pin_code_button_8"
            style="@style/KeyboardButtonStyleWhiteRound"
            android:text="@string/btn_8" />

        <com.grishko188.pinlibrary.widget.SquareButton
            android:id="@+id/pin_code_button_9"
            style="@style/KeyboardButtonStyleWhiteRound"
            android:text="@string/btn_9" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pin_code_fourth_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.grishko188.pinlibrary.widget.SquareImageButton
            android:id="@+id/fingerprint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/ic_fingerprint_white_24dp" />

        <com.grishko188.pinlibrary.widget.SquareButton
            android:id="@+id/pin_code_button_0"
            style="@style/KeyboardButtonStyleWhiteRound"
            android:text="@string/btn_0" />

        <com.grishko188.pinlibrary.widget.SquareImageButton
            android:id="@+id/backspace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/ic_backspace_white_24dp" />

    </LinearLayout>

</LinearLayout>