<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/pin_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/title_pin_description"
        android:textColor="@color/dark"
        android:textSize="@dimen/title_text_size" />

    <com.grishko188.pinlibrary.PinCodeField
        android:id="@+id/pin_code_field"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/pin_description"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:pcf_color="@color/dark"
        app:pcf_size="22dp" />

    <TextView
        android:id="@+id/btn_forgot_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pin_code_field"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/title_forgot_pin"
        android:textColor="@color/dark"
        android:textSize="@dimen/forgot_pin_text_size" />

    <Button
        android:id="@+id/skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="68dp"
        android:layout_marginRight="68dp"
        android:background="@drawable/selector_btn_skip"
        android:text="@string/title_btn_skip" />

    <com.grishko188.pinlibrary.KeyboardView
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/skip"
        android:layout_below="@+id/btn_forgot_pin"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:gravity="center_vertical"
        app:kv_button_text_size="@dimen/btn_text_size"
        app:kv_color="@color/dark" />
</RelativeLayout>